--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": ".",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,6 +14,7 @@
     "buffer": "^6.0.3",
     "dotenv": "^16.0.3",
     "emoji-picker-react": "^4.4.8",
+    "netlify-cli": "^13.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
